--- a/METARPG/index.html
+++ b/METARPG/index.html
@@ -8,11 +8,7 @@
         <link rel="icon" href="icon/icon.png" type="image/png">
         <link rel="apple-touch-icon" href="icon/icon.png">
         <link rel="stylesheet" type="text/css" href="fonts/gamefont.css">
-<<<<<<< Updated upstream
-        <title>METARPG</title>
-=======
-        <title>PROJECT VOLITION</title>
->>>>>>> Stashed changes
+        <title>RPOJECT VOLITION</title>
     </head>
     <body style="background-color: black">
         <script type="text/javascript" src="js/libs/pixi.js"></script>
